nxn/test/fail/001-001-101.nxn
// Return a value from block expression inside a block statement.

fn main() i32 {
    {                       // Block statement (to create nested scopes)
        let x: float = ${   // Block expression (to return values from nested scopes)
            set 7;          // ERROR: Integer can not be implicitly assigned to a float variable.
        };
        set x;              // ERROR: Can not return value from block statement, as block statements have unit type.
    }
    return 0;
}
